k8s/AWS/jobber-gateway/gateway-external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-external-dns
  namespace: production
  labels:
    app.kubernetes.io/name: gateway-external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: gateway-external-dns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gateway-external-dns
    spec:
      serviceAccountName: gateway-external-dns
      containers:
        - name: gateway-external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.20.0
          args:
            - --source=service
            - --source=ingress
            - --provider=aws
            - --aws-zone-type=public
            - --registry=txt
            - --txt-owner-id=gateway-external-dns
            - --domain-filter=mjoelak03.online
            - --log-level=debug
          resources:
            limits:
              cpu: '0.5'
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 150Mi
      securityContext:
        fsGroup: 65534
